<resources>
    <string name="app_name">Contact Manager</string>
    <string name="dropTable">DROP TABLE IF EXISTS</string>
    <string name="hint">Enter Name</string>
    <string name="occupationHint">Enter Occupation</string>
    <string name="buttonSave">Save</string>
    <string name="empty">Enter all fields please</string>
    <string name="floatingButtonDescription">Add contact Button</string>
    <string name="UpdateButton">Update</string>
    <string name="deleteButton">Delete</string>
</resources>